[project]
name = "deltap"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs>=2.2.0",
    "aiohttp>=3.8.0",
    "aiosignal>=1.2.0",
    "anyio>=3.6.0",
    "appnope>=0.1.3",
    "argon2-cffi>=21.3.0",
    "argon2-cffi-bindings>=21.2.0",
    "arrow>=1.2.0",
    "asttokens>=2.0.0",
    "async-lru>=1.0.0",
    "attrs>=21.4.0",
    "audioop-lts==0.2.1 ; python_full_version >= '3.13'",
    "babel>=2.9.0",
    "beautifulsoup4>=4.11.0",
    "bleach>=4.1.0",
    "certifi>=2021.10.8",
    "cffi>=1.15.0",
    "charset-normalizer>=2.0.0",
    "comm>=0.1.2",
    "coverage>=6.3.0",
    "debugpy>=1.6.0",
    "decorator>=5.1.0",
    "defusedxml>=0.7.1",
    "discord-py>=2.1.0",
    "executing>=1.1.0",
    "fastjsonschema>=2.16.0",
    "fqdn>=1.5.1",
    "frozenlist>=1.3.0",
    "h11>=0.12.0",
    "httpcore>=0.16.0",
    "httpx>=0.23.0",
    "idna>=3.3",
    "iniconfig>=1.1.1",
    "ipykernel>=6.16.0",
    "ipython>=8.0.0",
    "ipython-pygments-lexers>=1.0.0",
    "isoduration>=20.11.0",
    "jedi>=0.18.0",
    "jinja2>=3.0.0",
    "json5>=0.9.6",
    "jsonpointer>=2.3",
    "jsonschema>=4.16.0",
    "jsonschema-specifications>=2023.7.1",
    "markupsafe>=2.1.1",
    "matplotlib-inline>=0.1.6",
    "mistune>=2.0.4",
    "multidict>=6.0.2",
    "nbclient>=0.7.0",
    "nbconvert>=7.2.0",
    "nbformat>=5.7.0",
    "nest-asyncio>=1.5.6",
    "numpy>=1.21.0",
    "overrides>=7.3.0",
    "packaging>=21.3",
    "pandas>=1.3.0",
    "pandocfilters>=1.5.0",
    "parso>=0.8.3",
    "pexpect>=4.8.0",
    "platformdirs>=2.5.0",
    "pluggy>=1.0.0",
    "prometheus-client>=0.15.0",
    "prompt-toolkit>=3.0.30",
    "propcache>=0.1.0",
    "psutil>=5.9.0",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.2",
    "pyarrow>=21.0.0",
    "pycparser>=2.21",
    "pygments>=2.13.0",
    "pytest>=7.1.0",
    "pytest-asyncio>=0.19.0",
    "pytest-cov>=4.0.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=0.21.0",
    "python-json-logger>=2.0.0",
    "pytz>=2022.1",
    "pyyaml>=6.0",
    "pyzmq>=24.0.0",
    "referencing>=0.28.0",
    "requests>=2.28.0",
    "rfc3339-validator>=0.1.4",
    "rfc3986-validator>=0.1.1",
    "rpds-py>=0.8.0",
    "seaborn>=0.13.2",
    "send2trash>=1.8.0",
    "setuptools>=65.5.1",
    "six>=1.16.0",
    "sniffio>=1.2.0",
    "soupsieve>=2.3.0",
    "stack-data>=0.5.0",
    "terminado>=0.16.0",
    "tinycss2>=1.2.0",
    "tornado>=6.2.0",
    "traitlets>=5.5.0",
    "types-python-dateutil>=2.8.0",
    "typing-extensions>=4.3.0",
    "tzdata>=2022.1",
    "uri-template>=1.2.0",
    "urllib3>=1.26.0",
    "wcwidth>=0.2.5",
    "webcolors>=1.12.0",
    "webencodings>=0.5.1",
    "websocket-client>=1.4.0",
    "yarl>=1.8.0",
]
