[project]
name = "deltap"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs>=2.2.0",
    "aiohttp>=3.8.0",
    "aiosignal>=1.2.0",
    "anyio>=3.6.0",
    "attrs>=21.4.0",
    "audioop-lts==0.2.1 ; python_full_version >= '3.13'",
    "babel>=2.9.0",
    "certifi>=2021.10.8",
    "cffi>=1.15.0",
    "charset-normalizer>=2.0.0",
    "coverage>=6.3.0",
    "discord-py>=2.1.0",
    "frozenlist>=1.3.0",
    "idna>=3.3",
    "iniconfig>=1.1.1",
    "multidict>=6.0.2",
    "numpy>=1.21.0",
    "overrides>=7.3.0",
    "packaging>=21.3",
    "pandas>=2.3.2",
    "platformdirs>=2.5.0",
    "pluggy>=1.0.0",
    "propcache>=0.1.0",
    "pytest>=7.1.0",
    "pytest-asyncio>=0.19.0",
    "pytest-cov>=4.0.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=0.21.0",
    "pytz>=2022.1",
    "seaborn>=0.13.2",
    "setuptools>=65.5.1",
    "six>=1.16.0",
    "sniffio>=1.2.0",
    "types-python-dateutil>=2.8.0",
    "typing-extensions>=4.3.0",
    "tzdata>=2022.1",
    "urllib3>=1.26.0",
    "yarl>=1.8.0",
]
